--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@alch/alchemy-web3": "^1.1.9",
+    "@hyperledger/fabric-gateway": "^1.1.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "big-integer": "^1.6.51",
+    "bn.js": "^5.2.0",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
+    "eth-revert-reason": "^1.0.3",
+    "express": "^4.17.3",
+    "fabric-ca-client": "^2.2.4",
+    "fabric-network": "^2.2.4",
+    "fetch-ipfs": "^1.0.95",
+    "https": "^1.0.0",
+    "ipfs": "^0.62.2",
+    "js-ipfs": "^0.0.301",
+    "js-ipfs-fetch": "^3.5.1",
+    "node-fetch": "^2.6.7",
+    "react": "^17.0.2",
+    "react-context-hook": "^3.0.7",
+    "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.4.1",
+    "react-paginate": "^8.1.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^8.0.1"
   }
 }
